# vu_se_course_work

./: .gitignore  Cargo.toml  README.md  run_in_mif_hpc_cluster.txt
all_bench_results/: bm_att532_alg_Cga + 2-opt_8_cpus.out  bm_att532_alg_Cga + 3-opt_4_cpus.out  bm_att532_alg_Cga_1_cpus.out  bm_att532_alg_Cga_2_cpus.out  bm_att532_cga2opt_1_cpus_p1.out  bm_att532_cga2opt_1_cpus_p128.out  bm_att532_cga2opt_1_cpus_p16.out  bm_att532_cga2opt_1_cpus_p2.out  bm_att532_cga2opt_1_cpus_p256.out  bm_att532_cga2opt_1_cpus_p32.out  bm_att532_cga2opt_1_cpus_p4.out  bm_att532_cga2opt_1_cpus_p64.out  bm_att532_cga2opt_1_cpus_p8.out  bm_att532_cga2opt_2_cpus_p128.out  bm_att532_cga2opt_2_cpus_p16.out  bm_att532_cga2opt_2_cpus_p2.out  bm_att532_cga2opt_2_cpus_p256.out  bm_att532_cga2opt_2_cpus_p32.out  bm_att532_cga2opt_2_cpus_p4.out  bm_att532_cga2opt_2_cpus_p64.out  bm_att532_cga2opt_2_cpus_p8.out  bm_att532_cga2opt_4_cpus_p128.out  bm_att532_cga2opt_4_cpus_p16.out  bm_att532_cga2opt_4_cpus_p2.out  bm_att532_cga2opt_4_cpus_p256.out  bm_att532_cga2opt_4_cpus_p32.out  bm_att532_cga2opt_4_cpus_p4.out  bm_att532_cga2opt_4_cpus_p64.out  bm_att532_cga2opt_4_cpus_p8.out  bm_att532_cga2opt_8_cpus_p128.out  bm_att532_cga2opt_8_cpus_p16.out  bm_att532_cga2opt_8_cpus_p2.out  bm_att532_cga2opt_8_cpus_p256.out  bm_att532_cga2opt_8_cpus_p32.out  bm_att532_cga2opt_8_cpus_p4.out  bm_att532_cga2opt_8_cpus_p64.out  bm_att532_cga2opt_8_cpus_p8.out  bm_att532_cga3opt_1_cpus_p128.out  bm_att532_cga3opt_1_cpus_p2.out  bm_att532_cga3opt_1_cpus_p32.out  (+148 more)
benchmark_results/: bm_att532_1_cpus.out  (+24 more)
(+62 files in other folders)
