[package]
name = "salesman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = { version = "0.8", features = ["small_rng"] }
#tspf = {version = "0.3.1", path = "../tspf-rs/"}
tspf = {version = "0.3.1"}
