[package]
name = "salesman"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4", features = ["derive"] }
mpi = { version = "0.6", features = ["derive"] }
rand = { version = "0.8", features = ["small_rng"] }
tspf = { version = "0.3.1" }

[profile.release]
debug = true
# lto = true
